--- a/uimodule/webapp/manifest.json
+++ b/uimodule/webapp/manifest.json
@@ -124,10 +124,17 @@
           "target": [
             "SearchProducts"
           ]
+        },
+        {
+          "name": "DetailProduct",
+          "pattern": "DetailProduct",
+          "target": [
+            "DetailProduct"
+          ]
         }
       ],
       "targets": {
-        "TargetMainView": {
+        "MainView": {
           "viewType": "XML",
           "transition": "slide",
           "clearControlAggregation": false,
@@ -154,6 +161,13 @@
           "clearControlAggregation": false,
           "viewId": "SearchProducts",
           "viewName": "SearchProducts"
+        },
+        "DetailProduct": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "DetailProduct",
+          "viewName": "DetailProduct"
         }
       }
     },
