--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "shx": "^0.3.3",
     "@ui5/cli": "^2.14.1",
+    "@sap/ux-ui5-tooling": "1",
     "ui5-middleware-livereload": "^0.5.8",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
@@ -30,7 +31,8 @@
   },
   "ui5": {
     "dependencies": [
-      "ui5-middleware-livereload"
+      "ui5-middleware-livereload",
+      "@sap/ux-ui5-tooling"
     ]
   }
 }
